syntax = "proto3";

package xai.v1;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

// Tokenizer service for text tokenization
service Tokenizer {
  // Encode text into tokens
  rpc EncodeText(EncodeTextRequest) returns (EncodeTextResponse);

  // Decode tokens into text
  rpc DecodeTokens(DecodeTokensRequest) returns (DecodeTokensResponse);

  // Count tokens in text
  rpc CountTokens(CountTokensRequest) returns (CountTokensResponse);
}

// Encode text request
message EncodeTextRequest {
  string text = 1;
  string model = 2;
}

// Encode text response
message EncodeTextResponse {
  repeated int32 tokens = 1;
  int32 token_count = 2;
}

// Decode tokens request
message DecodeTokensRequest {
  repeated int32 tokens = 1;
  string model = 2;
}

// Decode tokens response
message DecodeTokensResponse {
  string text = 1;
  int32 token_count = 2;
}

// Count tokens request
message CountTokensRequest {
  string text = 1;
  string model = 2;
}

// Count tokens response
message CountTokensResponse {
  int32 token_count = 1;
  int32 character_count = 2;
}